variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:5: error: not found: value nbbisc
  nbBisc = nbbisc +1
           ^RunHalf:15: error: not found: value nbbisc
    nbBisc = nbbisc +1
             ^